--- a/index.css
+++ b/index.css
@@ -1,94 +1,118 @@
-nav>ul>li{
+nav>ul>li {
     display: inline;
-    margin: 5px ;
-    float:right;
+    margin: 5px;
+    float: right;
 }
-.navbar{
+
+.navbar {
     background-color: rgb(3, 10, 31);
     padding: 35px;
     border-radius: 10px;
 }
-ul>li>a{
+
+ul>li>a {
     text-decoration: none;
     color: aqua;
 }
-.container{
+
+.container {
     background-color: rgb(238, 199, 199);
     display: block;
     padding: 20px;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     text-decoration: rgb(106, 151, 61);
     width: 80%;
     margin-left: 60px;
     border-radius: 10px;
 }
-.welcome{
+
+.welcome {
     display: flex;
     justify-content: space-evenly;
 }
-.welcome>a>img{
+
+.welcome>img:hover {
+    cursor: pointer;
+    opacity: 0.6;
+}
+
+.welcome>a>img {
     border-radius: 100%;
     border: 3px solid blue;
 }
-h1{
+
+h1 {
     margin-top: 0px;
     color: brown;
-   
+
 }
-h2{ 
+
+h2 {
     color: chartreuse;
     /* text-decoration: overline; */
 }
-.images{
+
+.images {
     background-color: #da4d4d;
-    height: 100vh; 
-    
+    height: 100vh;
+
 }
-.images>img{
+
+.images>img {
     justify-content: space-evenly;
 }
-.fig2>img:hover{
+
+.fig2>img:hover {
     cursor: pointer;
     opacity: 0.6;
 }
-.figma>img:hover{
+
+.figma>img:hover {
     cursor: pointer;
     opacity: 0.6;
 }
-.fig2{
+
+.fig2 {
     display: flex;
     justify-content: space-between;
     padding: 20px;
 
 }
-.figma{
+
+.figma {
     display: flex;
     justify-content: space-between;
     padding: 20px;
 }
-h3{
+
+h3 {
     background-color: cyan;
     color: darkred;
-    
+
 }
-.tech>h2{
+
+.tech>h2 {
     text-align: center;
     color: maroon;
 }
-.tech>p{
+
+.tech>p {
     text-align: center;
 }
-.images>h3{
+
+.images>h3 {
     text-align: center;
 }
-.technology{
+
+.technology {
     margin: 5%;
     display: flex;
     /* flex-direction: column; */
     background-color: lightseagreen;
     border-radius: 10px;
 }
-#footer{
+
+#footer {
     background-color: mediumvioletred;
     text-align: center;
     width: 100%;
@@ -98,71 +122,81 @@ h3{
     margin-bottom: 0px;
     color: midnightblu;
     border-radius: 10px;
-    
+
 }
-.form{
+
+.form {
     display: flex;
     flex-direction: column;
     width: 100%;
     align-items: center;
-    background-color: rgb(207, 25, 25)
-    margin: left 50px; ;
+    background-color: rgb(207, 25, 25) margin: left 50px;
+    ;
     color: darkblue
 }
-.form>h1{
+
+.form>h1 {
     background-color: rgb(131, 131, 211);
     padding: 5px;
     width: 90%;
     text-align: center;
     border-radius: 10px;
-    
+
 
 }
-#Registration-form{
+
+#Registration-form {
     text-align: center;
-    background-color:rgb(180, 189, 216);
+    background-color: rgb(180, 189, 216);
     display: flex;
     flex-direction: column;
     /* padding: 0px; */
     align-items: center;
-    
+
 }
-#register{
+
+#register {
     display: flex;
     flex-direction: column;
     width: 40%;
     /* justify-content: center; */
     align-items: ;
 }
-#Registration-form>h2{
+
+#Registration-form>h2 {
     color: rgb(202, 64, 64);
 }
-.mission{
+
+.mission {
     background-color: greenyellow;
-    color:black;
+    color: black;
     padding: 2%;
     text-align: center;
     border-radius: 10px;
 }
-.vission{
+
+.vission {
     background-color: chocolate;
     color: black;
     padding: 2%;
     text-align: center;
     border-radius: 10px;
 }
-.services{
+
+.services {
     align-items: center;
     padding: 2%;
     background-color: rgb(196, 101, 101);
     border-radius: 10px;
 }
-.services>h1{
+
+.services>h1 {
     text-align: center;
     background-color: chartreuse;
     border-radius: 10px;
 }
-.services>ul>li{
+
+.services>ul>li {
     list-style: none;
     /* text-align: center; */
 }
